MFH Fix bug #47678 - Allow loadExtension to be disabled in SQLite3

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@277320 c90b9560-bf6c-de11-be94-00142212c4b1