ext/sqlite3/tests/sqlite3_22_loadextension.phpt
@@ -1,7 +1,13 @@
 --TEST--
 SQLite3 load extension
 --SKIPIF--
-<?php require_once(dirname(__FILE__) . '/skipif.inc'); ?>
+<?php
+require_once(dirname(__FILE__) . '/skipif.inc');
+$r = new ReflectionClass("sqlite3");
+if (!$r->hasMethod("loadExtension")) {
+	die("skip - sqlite3 doesn't have loadExtension enabled");
+}
+?>
 --INI--
 open_basedir=.
 sqlite3.extension_dir=.
